fixed - navbar scrollbar fixed in mob devices

--- a/app/global.css
+++ b/app/global.css
@@ -9,8 +9,10 @@
 @keyframes diamondBob {
     from {
         transform: translateY(-10px);
+        filter: brightness(120%);
     }
     to {
         transform: translateY(10px);
+        filter: brightness(100%);
     }
 }
